.provarCaches/00D410000011HE0EAM/objects/rstk__insptempl__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_insptempl</customHelpPage>
    <description>insptempl__c</description>
    <fields>
        <fullName>rstk__Do_Not_Package1__c</fullName>
        <description>Do-Not-Package1</description>
        <inlineHelpText>Do-Not-Package1</inlineHelpText>
        <label>Do-Not-Package1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__insptempl_sydiv__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__insptempl_refnum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__insptempl_refnum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_fixedqty__c</fullName>
        <label>Fixed Qty to Inspection Order</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Order Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Inspection Order Templates</relationshipLabel>
        <relationshipName>insptempl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_locnum__c</fullName>
        <label>Inspection Order Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_otherlocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location ID for Other Disposition</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Inspection Order Templates (Location ID for Other Disposition)</relationshipLabel>
        <relationshipName>insptempl2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_otherlocnum__c</fullName>
        <label>Location Number for Other Disposition</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_pct__c</fullName>
        <label>Percentage for Inspection Order Qty</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_qtymethod__c</fullName>
        <label>Method for Deriving Inspection Qty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Fixed Quantity</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__insptempl_refnum__c</fullName>
        <label>Template Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_scraplocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location ID for Scrapped Disposition</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Inspection Order Templates (Location ID for Scrapped Disposition)</relationshipLabel>
        <relationshipName>insptempl1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_scraplocnum__c</fullName>
        <label>Location Number for Scrapped Disposition</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inspection Order Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Inspection Order Templates</relationshipLabel>
        <relationshipName>insptempls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__insptempl_sydiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inspection Order Templates</relationshipLabel>
        <relationshipName>insptempl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inspection Order Template</label>
    <listViews>
        <fullName>rstk__Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__insptempl_sydiv__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__insptempl_fixedqty__c</columns>
        <columns>rstk__insptempl_site__c</columns>
        <columns>rstk__insptempl_locid__c</columns>
        <columns>rstk__insptempl_otherlocid__c</columns>
        <columns>rstk__insptempl_scraplocid__c</columns>
        <columns>rstk__insptempl_otherlocnum__c</columns>
        <columns>rstk__insptempl_scraplocnum__c</columns>
        <columns>rstk__insptempl_qtymethod__c</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Inspection_Order_Templates</fullName>
        <columns>NAME</columns>
        <columns>rstk__insptempl_sydiv__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__insptempl_fixedqty__c</columns>
        <columns>rstk__insptempl_site__c</columns>
        <columns>rstk__insptempl_locid__c</columns>
        <columns>rstk__insptempl_otherlocid__c</columns>
        <columns>rstk__insptempl_scraplocid__c</columns>
        <columns>rstk__insptempl_otherlocnum__c</columns>
        <columns>rstk__insptempl_scraplocnum__c</columns>
        <columns>rstk__insptempl_qtymethod__c</columns>
        <filterScope>Everything</filterScope>
        <label>Inspection Order Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_INSPTEMPL</fullName>
        <columns>NAME</columns>
        <columns>rstk__insptempl_refnum__c</columns>
        <columns>rstk__insptempl_qtymethod__c</columns>
        <columns>rstk__insptempl_fixedqty__c</columns>
        <columns>rstk__insptempl_pct__c</columns>
        <columns>rstk__insptempl_locid__c</columns>
        <columns>rstk__insptempl_locnum__c</columns>
        <columns>rstk__insptempl_otherlocid__c</columns>
        <columns>rstk__insptempl_scraplocid__c</columns>
        <columns>rstk__insptempl_otherlocnum__c</columns>
        <columns>rstk__insptempl_scraplocnum__c</columns>
        <filterScope>Everything</filterScope>
        <label>Inspection Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Order Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>